<resources>
    <string name="app_name">Pawpr</string>
    <string name="profile">Pawfile</string>
    <string name="search">Dog-o-Finder</string>
    <string name="message">Kennel Club</string>

    <string name="button_updateProfile">Update Pawfile</string>
    <string name="button_addImage">Update Pawfile Image</string>
    <string name="hint_name">Enter your dog\'s name</string>
    <string name="hint_breed">Tell us your dog\'s breed</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_bio">Tell us about your dog</string>
    <string name="prompt_size">Size</string>

    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="sign_up">Sign up</string>

    <string name="select_profile_image">Select Pawfile Image</string>

    <string name="button_location">Where do you play?</string>

    <string name="any">Any</string>
    <string name="five_km">Up to 5km</string>
    <string name="ten_km">Up to 10km</string>
    <string name="no_results">There are no results for your search, try a wider range</string>
    <string name="no_friends">There are no dogs in your kennel club, try liking a few in the Dog-o-Finder</string>

    <string name="good_boy">Good Boy</string>
    <string name="good_girl">Good Girl</string>

    <string name="puppy_label">Are they a puppy?</string>
    <string name="fixed_label">Have they been \"fixed\"?</string>

    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
</resources>