<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ui.profile.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"

            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher"
                    />

                <Button
                    android:id="@+id/chooseImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/button_addImage"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    />

                <EditText
                    android:id="@+id/profileName"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:autofillHints=""
                    android:hint="@string/hint_name"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="?attr/colorPrimaryDark"
                    android:textSize="12sp"
                    />

                <EditText
                    android:id="@+id/profileBreed"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:autofillHints=""
                    android:hint="@string/hint_breed"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="?attr/colorPrimaryDark"
                    android:textSize="12sp"
                    />

                <EditText
                    android:id="@+id/profileBio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="top|left"
                    android:hint="@string/hint_bio"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:maxLength="250"
                    android:maxLines="5"
                    android:minLines="3"
                    android:scrollbars="vertical"
                    android:singleLine="false"
                    android:textColor="?attr/colorPrimaryDark"
                    android:textSize="12sp"
                    />

                <Button
                    android:id="@+id/profileLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_location"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="411dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <RadioButton
                        android:id="@+id/radio_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/good_boy" />
                    <RadioButton
                        android:id="@+id/radio_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/good_girl"
                        />
                </RadioGroup>

                <TextView
                    android:id="@+id/puppyLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/puppy_label"
                    />

                <ToggleButton
                    android:id="@+id/puppyToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:textOff="@string/no"
                    android:textOn="@string/yes"
                    />

                <TextView
                    android:id="@+id/fixedLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fixed_label"
                    />

                <ToggleButton
                    android:id="@+id/fixedToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:textOff="@string/no"
                    android:textOn="@string/yes"
                    />


                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorPrimary"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_updateProfile"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>